# vectorless

./: .config-example.toml  .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
agent/: Cargo.toml
agent/src/: agent.rs  lib.rs  tool.rs
benches/: bench.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: agent.rs  docs.rs  index.rs  mod.rs  query.rs  serve.rs
core/: Cargo.toml
core/src/: client.rs  config.rs  document.rs  index.rs  lib.rs  markdown.rs  node.rs  parse.rs  pdf.rs  retrieve.rs  retriever.rs  storage.rs  toc.rs  tree_builder.rs
core/src/document/: mod.rs
core/src/indexer/: markdown.rs  mod.rs  parse.rs  pdf.rs  summary.rs  toc.rs
core/src/retriever/: mod.rs  retrieve.rs  tree.rs
core/src/storage/: cache.rs  mod.rs  workspace.rs
core/tests/: markdown_integration_test.rs
docker/: Dockerfile.cli  Dockerfile.service  README.md  docker-compose.yml
docs/: document.md  landing.html
examples/agent-rag/: Cargo.toml  README.md
examples/agent-rag/src/: main.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/local-rag/: Cargo.toml  README.md
examples/local-rag/src/: main.rs
examples/service-client/: Cargo.toml  README.md
examples/service-client/src/: main.rs
llm/: Cargo.toml
llm/src/: chat.rs  embedding.rs  lib.rs  openai.rs  zai.rs
rag/: Cargo.toml
rag/src/: lib.rs  main.rs  server.rs
rag/src/handlers/: mod.rs
rag/src/models/: document.rs  error.rs  mod.rs  query.rs
rag/src/pipeline/: ingest.rs  mod.rs  query.rs
rag/src/store/: index.rs  metadata.rs  mod.rs
sdk/: Cargo.toml
sdk/python/: pyproject.toml
sdk/python/vectorless_sdk/: __init__.py  client.py  exceptions.py  types.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: client.rs  error.rs  lib.rs  types.rs
sdk/src/: lib.rs
service/: Cargo.toml
service/src/: lib.rs  main.rs  server.rs
service/src/controllers/: mod.rs
service/src/dto/: document.rs  error.rs  mod.rs  query.rs
service/src/middleware/: auth.rs  cors.rs  logging.rs  mod.rs
service/src/repository/: index.rs  metadata.rs  mod.rs
service/src/service/: ingest.rs  mod.rs  query.rs
src/: lib.rs
tests/: integration.rs
