[workspace]
resolver = "2"
members = [
    "core",
    "rag",
    "cli",
    "sdk",
    "examples/basic",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["zTgx <beautifularea@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ztgx/vectorless"

[workspace.dependencies]
# Internal crates
vectorless-core = { path = "core" }

# External dependencies
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
debug = true
