[package]
name = "vectorless-cli"
version = "0.1.0"
edition = "2024"

authors = ["zTgx <beautifularea@gmail.com>"]
description = "Command-line tool for vectorless"
license = "MIT OR Apache-2.0"
keywords = ["cli", "search", "index"]
categories = ["command-line-utilities"]

[[bin]]
name = "vectorless"
path = "src/main.rs"

[dependencies]
# Internal crates
vectorless-core = { path = "../core" }
vectorless-llm = { path = "../llm" }
vectorless-service = { path = "../service" }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
