[package]
name = "vectorless-core"
version = "0.1.0"
edition = "2024"

authors = ["zTgx <beautifularea@gmail.com>"]
description = "Core library for vectorless - parsing, indexing, and retrieval"
license = "MIT OR Apache-2.0"
keywords = ["search", "index", "document", "full-text-search"]
categories = ["text-processing", "data-structures", "algorithms"]

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }
vectorless-llm = { path = "../llm", default-features = false, features = ["chat"] }
regex = "1.10"
futures = "0.3"
pdf-extract = "0.7"

[dev-dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
