[package]
name = "vectorless-llm"
version = "0.1.0"
edition = "2024"

authors = ["zTgx <beautifularea@gmail.com>"]
description = "LLM integration for vectorless - chat and embedding models"
license = "MIT OR Apache-2.0"
keywords = ["llm", "chat", "embedding", "openai", "anthropic"]
categories = ["api-bindings"]

[features]
default = ["chat"]
chat = []
embedding = []

[dependencies]
serde = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
