[package]
name = "vectorless"
version = "0.1.0"
edition = "2024"

authors = ["zTgx <beautifularea@gmail.com>"]
description = "A lightweight document indexing engine without vectorization"
documentation = "https://docs.rs/vectorless"
readme = "../../README.md"
repository = "https://github.com/ztgx/vectorless"
license = "MIT OR Apache-2.0"
keywords = ["search", "index", "document", "full-text-search"]
categories = ["text-processing", "data-structures", "algorithms"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
vectorless-core = { path = "../core" }
serde = { version = "1.0", optional = true, features = ["derive"] }
