[package]
name = "vectorless-service"
version = "0.1.0"
edition = "2024"

authors = ["zTgx <beautifularea@gmail.com>"]
description = "HTTP service layer for vectorless - provides REST API for document indexing and RAG"
license = "MIT OR Apache-2.0"
keywords = ["rag", "service", "http", "api"]
categories = ["web-programming", "api-bindings"]

[dependencies]
# Internal crates
vectorless-core = { path = "../core" }
vectorless-llm = { path = "../llm" }

# Async runtime
tokio = { workspace = true }

# Web framework
axum = { version = "0.7", features = ["multipart", "ws"] }
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Storage
sled = "0.34"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
