[package]
name = "agent-rag"
version = "0.1.0"
edition = "2024"

publish = false

[dependencies]
# Internal crates
vectorless-core = { path = "../../core" }
vectorless-llm = { path = "../../llm" }
vectorless-agent = { path = "../../agent" }

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
