[package]
name = "service-client"
version = "0.1.0"
edition = "2024"

publish = false

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
