# Vectorless Python SDK

# Python SDK for the vectorless service HTTP API.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vectorless-sdk"
version = "0.1.0"
description = "Python SDK for vectorless service - HTTP client for document indexing and RAG queries"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "zTgx", email = "beautifularea@gmail.com"},
]
keywords = ["rag", "sdk", "http-client", "document-indexing", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.hatchling.build.targets.wheel]
packages = ["vectorless_sdk"]

[tool.hatchling.build.targets.sdist]
packages = ["vectorless_sdk"]
