[package]
name = "vectorless-sdk-rs"
version = "0.1.0"
edition = "2024"

authors = ["zTgx <beautifularea@gmail.com>"]
description = "Rust SDK for vectorless service - HTTP client for document indexing and RAG queries"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ztgx/vectorless"
keywords = ["rag", "sdk", "http-client", "document-indexing"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = { workspace = true }

# UUID
uuid = { version = "1.0", features = ["serde", "v4"] }

# Async traits
async-trait = { workspace = true }

# Logging
tracing = "0.1"
